@@ -1,3 +1,8 @@
+2007-03-07  Tom Tromey  <tromey@redhat.com>
+
+	PR classpath/31057:
+	* java/util/regex/Pattern.java (toString): New method.
+
 2007-03-07  Gary Benson  <gbenson@redhat.com>
 
 	* resource/META-INF/services/org.w3c.dom.DOMImplementationSourceList:
